--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "xero-oauth2-app-ts",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "clean": "rimraf dist",
-    "prestart": "npm run clean && npm run build",
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
-  },
-  "devDependencies": {
-    "@azure/functions": "^3.5.1",
-    "@types/node": "^16.x",
-    "rimraf": "^5.0.0",
-    "typescript": "^4.0.0"
-  }
+	"name": "xero-oauth2-app-ts",
+	"version": "1.0.0",
+	"description": "",
+	"main": "dist/src/functions/*.js",
+	"scripts": {
+		"build": "tsc",
+		"watch": "tsc -w",
+		"clean": "rimraf dist",
+		"prestart": "npm run clean && npm run build",
+		"start": "func start",
+		"test": "echo \"No tests yet...\""
+	},
+	"dependencies": {
+		"@azure/functions": "^4.0.0-alpha.10"
+	},
+	"devDependencies": {
+		"@types/node": "^16.x",
+		"rimraf": "^5.0.0",
+		"typescript": "^4.0.0"
+	}
 }
