--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"@azure/functions": "^4.0.0-alpha.10"
 	},
 	"devDependencies": {
-		"@types/node": "^16.x",
-		"rimraf": "^5.0.0",
-		"typescript": "^4.0.0"
+		"@types/node": "18.x",
+		"typescript": "^4.0.0",
+		"rimraf": "^5.0.0"
 	}
 }
