Fixed HTTP Triggers not loading
- The path in the package.json was set incorrectly, so no files were being detected.
- Remove the testing httpTrigger1
- Moved back to using the app.http rather than app.generic on WebhooksHttpTrigger

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "xero-oauth2-app-ts",
 	"version": "1.0.0",
 	"description": "",
-	"main": "dist/src/functions/*.js",
+	"main": "dist/functions/*.js",
 	"scripts": {
 		"build": "tsc",
 		"watch": "tsc -w",
