--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	},
 	"devDependencies": {
 		"@types/node": "18.x",
-		"typescript": "^4.0.0",
-		"rimraf": "^5.0.0"
+		"crypto": "^1.0.1",
+		"rimraf": "^5.0.0",
+		"typescript": "^4.0.0"
 	}
 }
