--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,11 @@
 	"azureFunctions.projectRuntime": "~4",
 	"debug.internalConsoleOptions": "neverOpen",
 	"azureFunctions.projectLanguageModel": 4,
-	"azureFunctions.preDeployTask": "npm prune (functions)"
+	"azureFunctions.preDeployTask": "npm prune (functions)",
+	"eslint.rules.customizations": [{ "rule": "*", "severity": "warn" }],
+	"editor.codeActionsOnSave": { "source.fixAll.eslint": true },
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.formatOnSave": true,
+	"editor.rulers": [120],
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
