--- a/package.json
+++ b/package.json
@@ -4,20 +4,35 @@
 	"description": "",
 	"main": "dist/functions/*.js",
 	"scripts": {
-		"build": "tsc",
-		"watch": "tsc -w",
+		"build": "npx rollup -c",
 		"clean": "rimraf dist",
+		"lint": "eslint . --max-warnings 0 --report-unused-disable-directives",
+		"prettier": "prettier --config .prettierrc.cjs ./src --write",
 		"prestart": "npm run clean && npm run build",
 		"start": "func start",
-		"test": "echo \"No tests yet...\""
+		"test": "echo \"No tests yet...\"",
+		"watch": "tsc -w"
 	},
 	"dependencies": {
-		"@azure/functions": "^4.0.0-alpha.10"
+		"@azure/functions": "^4.0.0-alpha.10",
+		"zod": "^3.21.4",
+		"zod-validation-error": "^1.3.0"
 	},
 	"devDependencies": {
+		"@ianvs/prettier-plugin-sort-imports": "^4.0.2",
+		"@rollup/plugin-multi-entry": "^6.0.0",
+		"@rollup/plugin-typescript": "^11.1.1",
 		"@types/node": "18.x",
-		"crypto": "^1.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.9",
+		"@typescript-eslint/parser": "^5.59.9",
+		"eslint": "^8.42.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"prettier": "^2.8.8",
+		"prettier-plugin-packagejson": "^2.4.3",
 		"rimraf": "^5.0.0",
-		"typescript": "^4.0.0"
+		"rollup": "^3.24.0",
+		"rollup-plugin-auto-external": "^2.0.0",
+		"typescript": "^5.1.3"
 	}
 }
