--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,24 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
-		"outDir": "dist",
-		"rootDir": "src",
-		"sourceMap": true,
+		"target": "ES6",
+		"allowJs": false,
 		"strict": true,
-		"forceConsistentCasingInFileNames": true
-	}
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": false,
+		"esModuleInterop": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"jsx": "preserve",
+		"noImplicitAny": true,
+		"sourceMap": false,
+		"strictNullChecks": true,
+		"baseUrl": ".",
+		"rootDir": "src",
+		"outDir": "dist",
+		"paths": {
+			"@/*": ["./src/*"]
+		}
+	},
+	"exclude": ["node_modules"]
 }
