--- a/local.settings.example.json
+++ b/local.settings.example.json
@@ -4,6 +4,9 @@
 		"FUNCTIONS_WORKER_RUNTIME": "node",
 		"AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
 		"AzureWebJobsStorage": "",
-		"XERO_WEBHOOK_KEY": ""
+		"XERO_WEBHOOK_KEY": "",
+		"XERO_CLIENT_ID": "",
+		"XERO_CLIENT_SECRET": "",
+		"XERO_REDIRECT_URI": ""
 	}
 }
