--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	},
 	"dependencies": {
 		"@azure/functions": "^4.0.0-alpha.10",
+		"jwt-decode": "^3.1.2",
+		"xero-node": "^4.34.0",
 		"zod": "^3.21.4",
 		"zod-validation-error": "^1.3.0"
 	},
@@ -28,6 +30,7 @@
 		"eslint": "^8.42.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"openid-client": "^5.4.2",
 		"prettier": "^2.8.8",
 		"prettier-plugin-packagejson": "^2.4.3",
 		"rimraf": "^5.0.0",
