--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
 	"recommendations": [
-		"ms-azuretools.vscode-azurefunctions"
+		"ms-azuretools.vscode-azurefunctions",
 		"dbaeumer.vscode-eslint",
-		"esbenp.prettier-vscode",
+		"esbenp.prettier-vscode"
 	]
 }
